--- a/fruits/templates/fruits/index.html
+++ b/fruits/templates/fruits/index.html
@@ -106,8 +106,8 @@
                                 </div>
                                 <div class="row" style="display: flex; justify-content: space-between; margin-top: 15px; align-items: center">
                                     <label for="declaration-input" id="declaration_label" class="btn btn-success" style="" title="Файл не вибрано">Завантажити декларацію</label>
-                                    <input id="declaration-input" type="" value="Завантажити декларацію" hidden>
-                                    <span class="mt-2" style="width: max-content">Сьогодні завантажено: <span id="count-declarations">{{ declaration_count }}</span></span>
+                                    <input id="declaration-input" type="{% if user.is_authenticated %}file{% endif %}" value="Завантажити декларацію" hidden>
+                                    <span class="mt-2" style="width: max-content">Сьогодні завантажено: <span id="count-declarations">{{ declarations.count }}</span></span>
                                 </div>
                             </div>
                         </div>
@@ -127,170 +127,255 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script>
+    {% if msg_error %}
+        toastr.error('{{ msg_error }}', 'Помилка', {closeButton: true})
+    {% endif %}
+
     //**// CHAT //**//
     // Підключення до WebSocket
-    const chatSocket = new WebSocket('ws://' + window.location.host + '/ws/chat/');
+    function chatSocketFunc() {
+        const chatSocket = new WebSocket('ws://' + window.location.host + '/ws/chat/');
 
-    // Отримання div чату
-    let fruit_chat = document.getElementById('fruit_chat"');
-    // Отримання input для повідомлення
-    let fruit_message_input = document.getElementById('input_message');
-    // Отримання кнопку для відправлення повідомлення
-    let fruit_message_send = document.getElementById('button_send_message');
+        // Отримання div чату
+        let fruit_chat = document.getElementById('fruit_chat"');
+        // Отримання input для повідомлення
+        let fruit_message_input = document.getElementById('input_message');
+        // Отримання кнопку для відправлення повідомлення
+        let fruit_message_send = document.getElementById('button_send_message');
 
-    fruit_chat.scrollTop = fruit_chat.scrollHeight
+        fruit_chat.scrollTop = fruit_chat.scrollHeight
 
-    // Відправити повідомлення якщо користувача натиснув Enter
-    fruit_message_input.onkeyup = function (e) {
-        if (e.keyCode === 13) {
-            fruit_message_send.click()
+        // Відправити повідомлення якщо користувача натиснув Enter
+        fruit_message_input.onkeyup = function (e) {
+            if (e.keyCode === 13) {
+                fruit_message_send.click()
+            }
+        }
+
+        //Очистити поле input після відправки повідомлення
+        fruit_message_send.onclick = function () {
+            if (fruit_message_input.value.length === 0) return;
+            chatSocket.send(JSON.stringify({
+                'message': fruit_message_input.value,
+            }))
+            fruit_message_input.value = "";
+        }
+
+
+        //* Connect to Websocket *//
+        chatSocket.onopen = function (e) {
+            console.log('Успішно підключено до Websocket')
+        }
+
+        //* Websocket close *//
+        chatSocket.onclose = function (e) {
+            console.log("Websocket підключення було зруйновано. Перепідключення ...")
+            setTimeout(function () {
+                console.log("Перепідключення...");
+                chatSocketFunc();
+            }, 2000)
+        }
+
+        //* Обробка повідомлення отримане Websocket *//
+        chatSocket.onmessage = function (e) {
+            const data = JSON.parse(e.data);
+            console.log(data);
+            let msg_p = document.createElement('p');
+            msg_p.classList.add('m-1');
+            msg_p.innerText = data.time + ' ' + data.user + ': ' + data.message;
+            fruit_chat.append(msg_p);
+
+            // Скрол чату вниз
+            fruit_chat.scrollTop = fruit_chat.scrollHeight
+        };
+
+        //* Помилка Websocket *//
+        chatSocket.onerror = function (err) {
+            console.log("Websocket error:" + err.message);
+            console.log("Закриття сокету");
+            chatSocket.close()
         }
     }
-
-    //Очистити поле input після відправки повідомлення
-    fruit_message_send.onclick = function () {
-        if (fruit_message_input.value.length === 0) return;
-        chatSocket.send(JSON.stringify({
-            'message': fruit_message_input.value,
-        }))
-        fruit_message_input.value = "";
-    }
-
-
-    //* Connect to Websocket *//
-    chatSocket.onopen = function (e) {
-        console.log('Успішно підключено до Websocket')
-    }
-
-    //* Websocket close *//
-    chatSocket.onclose = function (e) {
-        console.log("Websocket підключення було зруйновано. Перепідключення ...")
-        setTimeout(function () {
-            console.log("Перепідключення...");
-
-        }, 2000)
-    }
-
-    //* Обробка повідомлення отримане Websocket *//
-    chatSocket.onmessage = function (e) {
-        const data = JSON.parse(e.data);
-        console.log(data);
-        let msg_p = document.createElement('p');
-        msg_p.classList.add('m-1');
-        msg_p.innerText = data.time + ' ' + data.user + ': ' + data.message;
-        fruit_chat.append(msg_p);
-
-        // Скрол чату вниз
-        fruit_chat.scrollTop = fruit_chat.scrollHeight
-    };
-
-    //* Помилка Websocket *//
-    chatSocket.onerror = function (err) {
-        console.log("Websocket error:" + err.message);
-        console.log("Закриття сокету");
-        chatSocket.close()
-    }
+    chatSocketFunc();
 </script>
 <script>
     //**// FruitSocket //**//
     //*Підключення вебсокету для маркету*//
-    const FruitSocket = new WebSocket('ws://' + window.location.host + '/ws/shop/');
-    console.log(FruitSocket)
-    //* Відправка купівлі продукту *//
-    $('.btn-buy-fruit').click(function (e){
-        let fruit = $(this).prev('input')[0];
-        FruitSocket.send(JSON.stringify({
-            action: 'buy',
-            "fruit_id": fruit.id,
-            "count": fruit.value,
-            'balance': $('#bank-balance').text()
-        }))
-        fruit.value = '';
-    })
-
-    //* Відправка продажу товару на вебсокет*//
-
-    $('.btn-sell-fruit').click(function (e){
-        let fruit = $(this)[0].parentElement.getElementsByTagName("input")[0]
-        console.log(fruit)
-        FruitSocket.send(JSON.stringify({
-            action: 'sell',
-            'fruit_id': fruit.id,
-            'count': fruit.value
-        }))
-        fruit.value = '';
-    });
-
-    $('#add_money').click(function (e){
-        let balance_input = $(this)[0].parentElement.getElementsByTagName('input')[0];
-        console.log('Balance Input', balance_input);
-        FruitSocket.send(JSON.stringify({
-            action: 'add balance',
-            'account_balance': balance_input.value,
-        }))
-        balance_input.value = '';
-    })
-
-    $('#sell_money').click(function (e){
-        let balance_input = $(this)[0].parentElement.getElementsByTagName("input")[0];
-        FruitSocket.send(JSON.stringify({
-            action: 'sell balance',
-            'account_balance': balance_input.value,
-        }))
-        balance_input.value = '';
-    })
-
-    console.log($('#progress-audit')[0].parentElement)
-
-
-    // Отримання повідомлення-відповіді від Websocket//
-    FruitSocket.onmessage = function (e){
-        let fruit_data = JSON.parse(e.data);
-        let logger_chat = $('#logger_chat');
-        msg = document.createElement("p");
-        console.log(fruit_data)
-        if(fruit_data['type'] === 'fruit_message') {
-            if (fruit_data['transaction'] === 'error balance') {
-                msg.classList.add('m-1', 'text-danger');
-                msg.innerText = `${fruit_data['date_transaction']} - ERROR: Постачальник привіз ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. Недостатньо коштів на рахунку, закупку відмінено.`
-                logger_chat.append(msg)
-            } else if (fruit_data['transaction'] === 'error fruit') {
-                msg.classList.add('m-1', 'text-danger');
-                msg.innerText = `${fruit_data['date_transaction']} - ERROR: Продаємо ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. В наявності стільки немає, продаж відмінено`
-                logger_chat.append(msg)
-            } else if (fruit_data['transaction'] === true) {
-                $('#last_operation_' + fruit_data['fruit_id'])[0].innerText = `${fruit_data['last_operation']}`;
-                msg.classList.add('m-1', 'text-success');
-                msg.innerText = `${fruit_data['date_transaction']} - SUCCESS: Постачальник привіз ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. З рахунку списано ${fruit_data['fruit_count'] * fruit_data['fruit_price']} USD, закупку завершено`
-                logger_chat.append(msg)
-            } else if (fruit_data['transaction'] === 'sell fruit') {
-                $('#last_operation_' + fruit_data['fruit_id'])[0].innerText = `${fruit_data['last_operation']}`;
-                msg.classList.add('m-1', 'text-success');
-                msg.innerText = `${fruit_data['date_transaction']} - SUCCESS: Продаємо ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. Заплатили ${fruit_data['fruit_count'] * fruit_data['fruit_price']} USD, продаж завершено`
-                logger_chat.append(msg)
+    function fruitSocketFunc() {
+        const FruitSocket = new WebSocket('ws://' + window.location.host + '/ws/shop/');
+        console.log(FruitSocket)
+        //* Відправка купівлі продукту *//
+        $('.btn-buy-fruit').click(function (e) {
+            let fruit = $(this).prev('input')[0];
+            let count = parseInt(fruit.value)
+            if (isNaN(count)) {
+                toastr.warning('Уведіть число', 'Увага', {closeButton: true})
+                count = '';
+            } else {
+                FruitSocket.send(JSON.stringify({
+                    action: 'buy',
+                    "fruit_id": fruit.id,
+                    "count": count,
+                    'balance': $('#bank-balance').text()
+                }))
             }
+            fruit.value = '';
+        })
 
-            $('#product_total_count_' + fruit_data['fruit_id'])[0].innerText = `${fruit_data['total_count']}`;
-            $('#bank-balance')[0].innerText = fruit_data['account_balance']
-        }else if (fruit_data['type'] === 'balance_message'){
-            $('#bank-balance')[0].innerText = fruit_data['balance']
-            if (fruit_data['success'] === true){
-                msg.classList.add('m-1', 'text-success');
-                msg.innerText = `${fruit_data['time']} - SUCCESS: Банківський рахунок було поповнено на ${fruit_data['added_balance']} USD.`
-                logger_chat.append(msg)
-            }else if(fruit_data['success'] === false){
-                msg.classList.add('m-1', 'text-warning');
-                msg.innerText = `${fruit_data['time']} - SUCCESS: З банківського рахунку було знято ${fruit_data['added_balance']} USD`
-                logger_chat.append(msg)
+        //* Відправка продажу товару на вебсокет*//
+
+        $('.btn-sell-fruit').click(function (e) {
+            let fruit = $(this)[0].parentElement.getElementsByTagName("input")[0]
+            console.log(fruit)
+            let count = parseInt(fruit.value)
+            if (isNaN(count)) {
+                toastr.warning('Уведіть число', 'Увага', {closeButton: true})
+                count = '';
+            } else {
+                FruitSocket.send(JSON.stringify({
+                    action: 'sell',
+                    'fruit_id': fruit.id,
+                    'count': count
+                }))
             }
-        }else if (fruit_data['error']){
-            toastr.error(`${fruit_data['error']}`, 'Авторизація', {closeButton: true});
+            fruit.value = '';
+        });
+
+        $('#add_money').click(function (e) {
+            let balance_input = $(this)[0].parentElement.getElementsByTagName('input')[0];
+            console.log('Balance Input', balance_input);
+            FruitSocket.send(JSON.stringify({
+                action: 'add balance',
+                'account_balance': balance_input.value,
+            }))
+            balance_input.value = '';
+        })
+
+        $('#sell_money').click(function (e) {
+            let balance_input = $(this)[0].parentElement.getElementsByTagName("input")[0];
+            FruitSocket.send(JSON.stringify({
+                action: 'sell balance',
+                'account_balance': balance_input.value,
+            }))
+            balance_input.value = '';
+        })
+
+        console.log($('#progress-audit')[0].parentElement)
+
+        FruitSocket.onclose = function (e) {
+            console.log("Websocket підключення було зруйновано. Перепідключення ...")
+            setTimeout(function () {
+                console.log("Перепідключення...");
+                fruitSocketFunc();
+            }, 2000)
         }
-    };
+
+
+        // Отримання повідомлення-відповіді від Websocket//
+        FruitSocket.onmessage = function (e) {
+            let fruit_data = JSON.parse(e.data);
+            let logger_chat = $('#logger_chat');
+            logger_chat.scrollTop = logger_chat.scrollHeight;
+            msg = document.createElement("p");
+            console.log(fruit_data)
+            if (fruit_data['type'] === 'fruit_message') {
+                if (fruit_data['transaction'] === 'error balance') {
+                    msg.classList.add('m-1', 'text-danger');
+                    msg.innerText = `${fruit_data['date_transaction']} - ERROR: Постачальник привіз ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. Недостатньо коштів на рахунку, закупку відмінено.`
+                    logger_chat.append(msg)
+                } else if (fruit_data['transaction'] === 'error fruit') {
+                    msg.classList.add('m-1', 'text-danger');
+                    msg.innerText = `${fruit_data['date_transaction']} - ERROR: Продаємо ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. В наявності стільки немає, продаж відмінено`
+                    logger_chat.append(msg)
+                } else if (fruit_data['transaction'] === true) {
+                    $('#last_operation_' + fruit_data['fruit_id'])[0].innerText = `${fruit_data['last_operation']}`;
+                    msg.classList.add('m-1', 'text-success');
+                    msg.innerText = `${fruit_data['date_transaction']} - SUCCESS: Постачальник привіз ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. З рахунку списано ${fruit_data['fruit_count'] * fruit_data['fruit_price']} USD, закупку завершено`
+                    logger_chat.append(msg)
+                } else if (fruit_data['transaction'] === 'sell fruit') {
+                    $('#last_operation_' + fruit_data['fruit_id'])[0].innerText = `${fruit_data['last_operation']}`;
+                    msg.classList.add('m-1', 'text-success');
+                    msg.innerText = `${fruit_data['date_transaction']} - SUCCESS: Продаємо ${fruit_data['fruit_count']} ${fruit_data['fruit_name']}. Заплатили ${fruit_data['fruit_count'] * fruit_data['fruit_price']} USD, продаж завершено`
+                    logger_chat.append(msg)
+                }
+
+                $('#product_total_count_' + fruit_data['fruit_id'])[0].innerText = `${fruit_data['total_count']}`;
+                $('#bank-balance')[0].innerText = fruit_data['account_balance']
+            } else if (fruit_data['type'] === 'balance_message') {
+                $('#bank-balance')[0].innerText = fruit_data['balance']
+                if (fruit_data['success'] === true) {
+                    msg.classList.add('m-1', 'text-success');
+                    msg.innerText = `${fruit_data['time']} - SUCCESS: Банківський рахунок було поповнено на ${fruit_data['added_balance']} USD.`
+                    logger_chat.append(msg)
+                } else if (fruit_data['success'] === false) {
+                    msg.classList.add('m-1', 'text-warning');
+                    msg.innerText = `${fruit_data['time']} - SUCCESS: З банківського рахунку було знято ${fruit_data['added_balance']} USD`
+                    logger_chat.append(msg)
+                }
+            } else if (fruit_data['error']) {
+                toastr.error(`${fruit_data['error']}`, 'Авторизація', {closeButton: true});
+            }
+            logger_chat.scrollTop = logger_chat.scrollHeight;
+        };
+    }
+    fruitSocketFunc();
+
+const declarationInput = $('#declaration-input')
+const declarationLabel = $('#declaration_label')
+const declarationCount = $('#count-declarations')
+
+declarationInput.on('change', function() {
+    let file = this.files[0]
+    if (file) {
+        if ((file.size / 1000000) > 1) {
+            toastr.error('Розмір файлу не повинен бути більше 1МБ', 'Помилка')
+            return
+        }
+        declarationLabel.attr('title', file.name)
+        console.log(file)
+        loadDeclaration(file)
+    } else {
+        declarationLabel.attr('title', "Файл не обрано")
+    }
+});
+
+function loadDeclaration(declaration) {
+    let format_data = new FormData();
+    format_data.append('declaration', declaration)
+    console.log(format_data)
+    $.ajax({
+        url: '{% url "load_declaration" %}',
+        type: 'POST',
+        data: format_data,
+        headers: {
+            "X-Requested-With": "XMLHttpRequest",
+            "X-CSRFToken": '{{ csrf_token }}',
+        },
+        success: function(data) {
+            if (data.success) {
+                declarationLabel.attr('title', 'Файл не обрано')
+                toastr.success('Декларація завантажена', 'Успіх')
+                declarationCount.text(data.success)
+            } else {
+                alert(data.error)
+            }
+        },
+        error: function(error) {
+            console.log('Помилка при відправці декларації:', error)
+        },
+        cache: false,
+        contentType: false,
+        processData: false,
+    })
+}
+
+
 
 </script>
 <script>
-    const auditSocket = new WebSocket('ws://' + window.location.host + '/ws/audit/');
+    {% if user.is_authenticated %}
+    const auditSocket = new WebSocket('ws://' + window.location.host + '/ws/audit/' + '{{ user.id }}' +'/');
+    {% endif %}
 
 
     //* Connect to Websocket *//
@@ -309,13 +394,18 @@
 
     $('#start_audit').click(function (e){
         console.log('btn')
+        {% if user.is_authenticated %}
         $.ajax({
             url: '{% url "start_audit" %}',
             type: 'GET',
+            data: {"user_id": '{{ user.id }}'},
             success: function (e){
                 console.log('WORK')
             }
         })
+        {% else %}
+            toastr.error('Авторизуйтесь', 'Помилка', {closeButton: true})
+        {% endif %}
     })
 
     auditSocket.onmessage = function (e) {
